--- a/login/templates/release_task_2.html
+++ b/login/templates/release_task_2.html
@@ -262,7 +262,7 @@
                                                         <div class="form-group">
                                                             <label for="id_m1" id="memb1">成员1:</label>
                                                             <input type="text" name="m1" class="form-control"
-                                                                   maxlength="128" required id="id_m1"/>
+                                                                   maxlength="128"  id="id_m1"/>
                                                         </div>
                                                     </div>
 
@@ -329,7 +329,7 @@
                                         <div class="col-sm-7 col-sm-offset-1">
                                             <div class="form-group">
                                                 <input type="text" maxlength="1" class="form-control"
-                                                       name="user_level" required
+                                                       name="user_level"
                                                        style="margin-top: 30px;" placeholder="设置标注师门槛，1~5">
                                             </div>
                                             <div class="form-group">
