--- a/login/templates/all_task.html
+++ b/login/templates/all_task.html
@@ -623,6 +623,7 @@
                                         <th>操作</th>
                                     {% endif %}
                                     <th>悬赏积分</th>
+                                <th>任务备注</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -672,6 +673,9 @@
                                             <td><span
                                                     class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
                                             </td>
+                                        <td><span
+                                                    class="label label-danger">{{task.details }}</span>
+                                            </td>
                                         </form>
                                     </tr>
                                 {% endfor %}
@@ -683,6 +687,109 @@
 
                 </div><!--end col-6 -->
             </div>
+                    {% if request.session.is_login %}
+
+                <div class="row" id="Tasks_to_examine">
+                    <div class="col-md-12">
+                        <section  class="panel"style="background-size: 100%;background-image: url({{ static('css/all_task_4.jpg') }}">
+                            <header class="panel-heading">
+                                为您推荐
+                            </header>
+                            <div class="panel-body table-responsive">
+
+                                <form action="/all_task/" method="post">
+                                    <table class="table table-hover">
+                                        <thead>
+                                        <tr>
+                                            <th></th>
+
+                                            <th>#</th>
+                                            <th>任务名称</th>
+                                            <th>类型</th>
+                                            <th>管理者</th>
+                                            <!-- <th>Client</th> -->
+                                            {#                                    <th>Details</th>#}
+                                            <th>发布时间</th>
+                                            <!-- <th>Price</th> -->
+                                            <th>当前状态</th>
+                                            <th>人员需求</th>
+                                            {% if request.session.is_login %}
+                                                <th>操作</th>
+                                            {% endif %}
+                                            <th>悬赏积分</th>
+                                        <th>任务备注</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+
+                                        <div class="task-content">
+                                            {{ csrf_input }}
+                                            {% for task in recommand_tasks %}
+                                                <tr>
+                                                    <td>
+
+                                                    </td>
+                                                    <div class="task-title">
+                                                        <td>{{ task.id }}</td>
+                                                        <td>{{ task.name }}</td>
+                                                        <td>
+                                                            {{ task_templates[task.template] }}{{ task_types[task.type] }}</td>
+
+                                                        <td>{{ task.admin }}</td>
+                                                        {#                                                        <td>{{ task.details }}</td>#}
+                                                        <!-- <td>Steve</td> -->
+                                                        <td>{{ task.c_time.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                                                        <!-- <td>$1500</td> -->
+                                                        {% if not task.is_closed %}
+                                                            <td><span class="label label-danger">正在进行</span></td>
+                                                        {% else %}
+                                                            <td><span class="label label-danger">已停止</span></td>
+                                                        {% endif %}
+                                                        <td><span
+
+                                                                class="label label-primary">共{{ task.max_tagged_num }} 个工位，剩余{{ task.max_tagged_num - task.num_worker }}个</span>
+                                                        </td>
+                                                        <td>
+                                                            <div class="hidden-phone">
+                                                    {% if request.session.is_login %}
+                                                        <button type="submit" name="collect" value="{{ task.id }}"
+                                                                class="btn btn-default btn-xs"><i
+                                                                class="fa fa-star"></i>收藏
+                                                        </button>
+                                                        {% if not task.is_closed %}
+                                                            <button type="submit" name="enter" value="{{ task.id }}"
+                                                                    class="btn btn-default btn-xs"><i
+                                                                    class="fa fa-pencil"></i>进入任务
+                                                            </button>
+                                                            <button type="submit" name="take_a_position"
+                                                                    value="{{ task.id }}"
+                                                                    class="btn btn-default btn-xs"><i
+                                                                    class="fa fa-anchor"></i>抢位
+                                                            </button>
+                                                        {% endif %}
+                                                    {% endif %}
+                                                </div>
+                                                        </td>
+                                                        <td><span
+                                                                class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                        </td>
+                                                    <td><span
+                                                                class="label label-danger">{{ task.details }}</span>
+                                                        </td>
+                                                    </div>
+
+                                                </tr>
+                                            {% endfor %}
+                                        </div>
+                                        </tbody>
+                                    </table>
+                                </form>
+
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            {% endif %}
             {% if request.session.is_login %}
                 <div class="row" id="GetPostion_Tasks">
 
@@ -712,6 +819,7 @@
                                             <th>操作</th>
                                         {% endif %}
                                         <th>悬赏积分</th>
+                                    <th>任务备注</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -764,6 +872,9 @@
                                                         <td><span
                                                                 class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
                                                         </td>
+                                                    <td><span
+                                                                class="label label-danger">{{ task.details }}</span>
+                                                        </td>
                                                     </div>
 
                                                 </tr>
@@ -809,6 +920,7 @@
                                                 <th>操作</th>
                                             {% endif %}
                                             <th>悬赏积分</th>
+                                        <th>任务备注</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -867,6 +979,9 @@
                                                         <td><span
                                                                 class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
                                                         </td>
+                                                    <td><span
+                                                                class="label label-danger">{{ task.details }}</span>
+                                                        </td>
                                                     </div>
 
                                                 </tr>
@@ -920,6 +1035,7 @@
                                                 <th>操作</th>
                                             {% endif %}
                                             <th>悬赏积分</th>
+                                        <th>任务备注</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -975,7 +1091,7 @@
                                                             </div>
                                                         </td>
                                                         <td><span
-                                                                class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                                class="label label-danger">{{ task.details }}</span>
                                                         </td>
                                                     </div>
 
@@ -1025,6 +1141,7 @@
                                             <th>操作</th>
                                         {% endif %}
                                         <th>悬赏积分</th>
+                                    <th>任务备注</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -1078,6 +1195,9 @@
                                                         <td><span
                                                                 class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
                                                         </td>
+                                                    <td><span
+                                                                class="label label-danger">{{ task.details }}</span>
+                                                        </td>
                                                     </div>
 
                                                 </tr>
@@ -1122,6 +1242,7 @@
                                             <th>操作</th>
                                         {% endif %}
                                         <th>悬赏积分</th>
+                                    <th>任务备注</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -1172,6 +1293,9 @@
                                                         <td><span
                                                                 class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
                                                         </td>
+                                                    <td><span
+                                                                class="label label-danger">{{ task.details }}</span>
+                                                        </td>
                                                     </div>
 
                                                 </tr>
@@ -1188,7 +1312,7 @@
             {% endif %}
             <!-- row end -->
 
-{% if request.session.is_login %}
+            {% if request.session.is_login %}
 
                 <div class="row" id="Tasks_to_examine">
                     <div class="col-md-12">
@@ -1218,6 +1342,7 @@
                                                 <th>操作</th>
                                             {% endif %}
                                             <th>悬赏积分</th>
+                                        <th>任务备注</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -1227,13 +1352,7 @@
                                             {% for task in Tasks_to_examine %}
                                                 <tr>
                                                     <td>
-                                                        <div class="task-checkbox">
-                                                            <!-- <input type="checkbox" class="list-child" value=""  /> -->
-                                                            <input type="checkbox" name="canceled_task_id_list"
-                                                                   value="{{ task.id }}"
-                                                                   class="flat-grey list-child"/>
-                                                            <!-- <input type="checkbox" class="square-grey"/> -->
-                                                        </div>
+
                                                     </td>
                                                     <div class="task-title">
                                                         <td>{{ task.id }}</td>
@@ -1266,7 +1385,10 @@
                                                             </div>
                                                         </td>
                                                         <td><span
-                                                                class="label label-danger">{{ task.credit }}</span>
+                                                               class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                        </td>
+                                                    <td><span
+                                                               class="label label-danger">{{ task.details}}</span>
                                                         </td>
                                                     </div>
 
