--- a/login/templates/chart.html
+++ b/login/templates/chart.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>www.freemoban.com</title>
+    <title>成果统计</title>
+        <!-- Favicons -->
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
     <!-- Bootstrap Styles-->
     <link href="{{ static('assets_chart/css/bootstrap.css')}}" rel="stylesheet" />
     <!-- FontAwesome Styles-->
