--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -4,7 +4,10 @@
 <head>
 
     <!-- /.website title -->
-    <title>Backyard Landing Page</title>
+    <title>登录</title>
+        <!-- Favicons -->
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <!-- CSS Files -->
