--- a/login/templates/picture_detail.html
+++ b/login/templates/picture_detail.html
@@ -1,7 +1,10 @@
 {# 显示单张图片标注的详细结果 #}
 <!DOCTYPE html>
 <head>
-    <title>标记细节</title>
+    <title>标记细节查看</title>
+        <!-- Favicons -->
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta charset="UTF-8">
