--- a/login/templates/picture_result.html
+++ b/login/templates/picture_result.html
@@ -4,7 +4,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Crystal Responsive Template</title>
+    <title>图片标注成果</title>
+        <!-- Favicons -->
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="">
