--- a/login/templates/confirm_to_upload_pictures.html
+++ b/login/templates/confirm_to_upload_pictures.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>上传图片数据集确认</title>
-
+    <!-- Favicons -->
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
     <!-- Bootstrap -->
     <link href="{{ static('assets/css/choice_q_bootstrap.min.css') }}" rel="stylesheet">
     <!-- Animation -->
