--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -1,4 +1,4 @@
-{# 首页，未做改动 #}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,8 +9,8 @@
     <meta content="" name="description">
 
     <!-- Favicons -->
-    <link href="{{ static('img/favicon.png') }}" rel="icon">
-    <link href="{{ static('img/apple-touch-icon.png') }}" rel="apple-touch-icon">
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700"
