--- a/login/templates/release_task_1.html
+++ b/login/templates/release_task_1.html
@@ -32,7 +32,10 @@
 
     <link rel="apple-touch-icon" sizes="76x76" href="{{ static('assets/img/apple-icon.png') }}"/>
     <link rel="icon" type="{{ static('image/png') }}" href="{{ static('assets/img/favicon.png') }}"/>
-    <title>Paper Bootstrap Wizard by Creative Tim</title>
+    <title>发布任务</title>
+        <!-- Favicons -->
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
 
