--- a/qmuidemo/src/main/res/layout/fragment_home.xml
+++ b/qmuidemo/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,8 @@
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
-                                                android:clipChildren="false">
+                                                android:clipChildren="false"
+    android:id="@+id/home_id">
 
     <com.qmuiteam.qmui.widget.QMUIViewPager
         android:id="@+id/pager"
