--- a/qmuidemo/src/main/res/layout/fragment_about.xml
+++ b/qmuidemo/src/main/res/layout/fragment_about.xml
@@ -36,10 +36,10 @@
             android:paddingTop="70dp">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="378dp"
+                android:layout_height="320  dp"
                 android:contentDescription="Logo"
-                android:src="@mipmap/about_logo"/>
+                android:src="@drawable/oneisall_logo"/>
 
             <TextView
                 android:id="@+id/version"
