--- a/login/templates/all_task.html
+++ b/login/templates/all_task.html
@@ -680,7 +680,7 @@
                                                 </div>
                                             </td>
                                             <td><span
-                                                    class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                    class="label label-danger">{{ task.credit }}</span>
                                             </td>
                                         <td><span
                                                     class="label label-danger">{{task.details }}</span>
@@ -780,7 +780,7 @@
                                                 </div>
                                                         </td>
                                                         <td><span
-                                                                class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                                class="label label-danger">{{ task.credit }}</span>
                                                         </td>
                                                     <td><span
                                                                 class="label label-danger">{{ task.details }}</span>
@@ -879,7 +879,7 @@
                                                             </div>
                                                         </td>
                                                         <td><span
-                                                                class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                                class="label label-danger">{{ task.credit }}</span>
                                                         </td>
                                                     <td><span
                                                                 class="label label-danger">{{ task.details }}</span>
@@ -986,7 +986,7 @@
                                                             </div>
                                                         </td>
                                                         <td><span
-                                                                class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                                class="label label-danger">{{ task.credit }}</span>
                                                         </td>
                                                     <td><span
                                                                 class="label label-danger">{{ task.details }}</span>
@@ -1202,7 +1202,7 @@
                                                             </div>
                                                         </td>
                                                         <td><span
-                                                                class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                                class="label label-danger">{{ task.credit }}</span>
                                                         </td>
                                                     <td><span
                                                                 class="label label-danger">{{ task.details }}</span>
@@ -1300,7 +1300,7 @@
                                                             </div>
                                                         </td>
                                                         <td><span
-                                                                class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                                class="label label-danger">{{ task.credit }}</span>
                                                         </td>
                                                     <td><span
                                                                 class="label label-danger">{{ task.details }}</span>
@@ -1394,7 +1394,7 @@
                                                             </div>
                                                         </td>
                                                         <td><span
-                                                               class="label label-danger">{{ task.credit * task.subtask_set.count() * task.max_tagged_num }}</span>
+                                                               class="label label-danger">{{ task.credit }}</span>
                                                         </td>
                                                     <td><span
                                                                class="label label-danger">{{ task.details}}</span>
