--- a/login/templates/chart.html
+++ b/login/templates/chart.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>www.freemoban.com</title>
+    <title>成果统计</title>
+        <!-- Favicons -->
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
     <!-- Bootstrap Styles-->
     <link href="{{ static('assets_chart/css/bootstrap.css')}}" rel="stylesheet" />
     <!-- FontAwesome Styles-->
@@ -185,7 +188,7 @@
                                         {% endfor %}
                                 </div>
                                 <div class="text-right">
-                                   {# <button type="submit" class="btn btn-warning" ><i class="fa fa-arrow-circle-right"></i>  通过以上答案  </button> #}
+                                    {# <button type="submit" class="btn btn-warning" ><i class="fa fa-arrow-circle-right"></i>  通过以上答案  </button>  #}
                                 </div>
                             </div>
                         </div>
