--- a/login/templates/chart.html
+++ b/login/templates/chart.html
@@ -188,7 +188,8 @@
                                         {% endfor %}
                                 </div>
                                 <div class="text-right">
-                                    <button type="submit" class="btn btn-warning" ><i class="fa fa-arrow-circle-right"></i>  通过以上答案  </button>                                </div>
+                                   {# <button type="submit" class="btn btn-warning" ><i class="fa fa-arrow-circle-right"></i>  通过以上答案  </button> #}
+                                </div>
                             </div>
                         </div>
 
