--- a/login/templates/qa_result.html
+++ b/login/templates/qa_result.html
@@ -15,6 +15,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         window.scrollTo(0, 1);
     } </script>
 
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
     <link rel="stylesheet" href="{{ static('css/qa_r_lightbox.css') }}"><!-- for gallery css -->
 
     <!-- banner text effect css files -->
