--- a/login/templates/check_pic.html
+++ b/login/templates/check_pic.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>图片筛查</title>
-        <!-- Favicons -->
+    <title>视频图集预选</title>
+
     <link href="{{ static('img/logo_2.png') }}" rel="icon">
     <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
   <!-- CSS -->
