--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -1,4 +1,4 @@
-
+{# 首页，未做改动 #}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +8,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!-- Favicons -->
+     <!-- Favicons -->
     <link href="{{ static('img/logo_2.png') }}" rel="icon">
     <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
 
