--- a/login/templates/recharge.html
+++ b/login/templates/recharge.html
@@ -4,14 +4,14 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>充值页</title>
-        <!-- Favicons -->
-    <link href="{{ static('img/logo_2.png') }}" rel="icon">
-    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
+    <title>充值页面</title>
     <link href="{{ static('lib/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ static('css/recharge_amazeui.min.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ static('css/recharge_main.css') }}"/>
 
+            <!-- Favicons -->
+    <link href="{{ static('img/logo_2.png') }}" rel="icon">
+    <link href="{{ static('img/logo_3.png') }}" rel="apple-touch-icon">
 
 </head>
 <body>
