上传附件前端+审核人员模糊匹配前端

--- a/login/templates/all_task.html
+++ b/login/templates/all_task.html
@@ -777,6 +777,10 @@
                                                                     class="btn btn-default btn-xs"><i
                                                                     class="fa fa-anchor"></i>抢位
                                                             </button>
+                                                            <button type="submit" name="download" onclick="window.location.href='/download_other_files/'"
+                                                           class="btn btn-default btn-xs"><i
+                                                                            class="fa fa-download"></i>下载说明附件
+                                                            </button>
                                                         {% endif %}
                                                     {% endif %}
                                                 </div>
@@ -877,6 +881,10 @@
                                                                             class="btn btn-default btn-xs"><i
                                                                             class="fa fa-pencil"></i>放弃抢位
                                                                     </button>
+                                                                    <button type="submit" name="download" onclick="window.location.href='/download_other_files/'"
+                                                           class="btn btn-default btn-xs"><i
+                                                                            class="fa fa-download"></i>下载说明附件
+                                                            </button>
                                                                 {% endif %}
                                                             </div>
                                                         </td>
@@ -984,6 +992,10 @@
                                                                             class="btn btn-default btn-xs"><i
                                                                             class="fa fa-anchor"></i>抢位
                                                                     </button>
+                                                                    <button type="submit" name="download" onclick="window.location.href='/download_other_files/'"
+                                                           class="btn btn-default btn-xs"><i
+                                                                            class="fa fa-download"></i>下载说明附件
+                                                            </button>
                                                                 {% endif %}
                                                             </div>
                                                         </td>
@@ -1098,6 +1110,10 @@
                                                                             class="btn btn-default btn-xs"><i
                                                                             class="fa fa-anchor"></i>关闭任务
                                                                     </button>
+                                                                    <button type="submit" name="download" onclick="window.location.href='/download_other_files/'"
+                                                           class="btn btn-default btn-xs"><i
+                                                                            class="fa fa-download"></i>下载说明附件
+                                                            </button>
                                                                 {% endif %}
                                                             </div>
                                                         </td>
@@ -1195,6 +1211,11 @@
                                                                         class="btn btn-default btn-xs"><i
                                                                         class="fa fa-pencil"></i>放弃任务
                                                                 </button>
+                                                            <button type="submit" name="download" onclick="window.location.href='/download_other_files/'"
+                                                           class="btn btn-default btn-xs"><i
+                                                                            class="fa fa-download"></i>下载说明附件
+                                                            </button>
+
                                                                 {#                                                                <button type="submit" name="take_a_position"#}
                                                                 {#                                                                        value="{{ task.id }}"#}
                                                                 {#                                                                        class="btn btn-default btn-xs"><i#}
@@ -1299,6 +1320,10 @@
                                                                         class="btn btn-default btn-xs"><i
                                                                         class="fa fa-pencil"></i>放弃任务
                                                                 </button>
+                                                            <button type="submit" name="download" onclick="window.location.href='/download_other_files/'"
+                                                           class="btn btn-default btn-xs"><i
+                                                                            class="fa fa-download"></i>下载说明附件
+                                                            </button>
                                                             </div>
                                                         </td>
                                                         <td><span
@@ -1393,6 +1418,10 @@
                                                                         class="btn btn-default btn-xs"><i
                                                                         class="fa fa-pencil"></i>检查成果
                                                                 </button>
+                                                                <button type="submit" name="download" onclick="window.location.href='/download_other_files/'"
+                                                           class="btn btn-default btn-xs"><i
+                                                                            class="fa fa-download"></i>下载说明附件
+                                                            </button>
                                                             </div>
                                                         </td>
                                                         <td><span
