--- a/login/templates/choose.html
+++ b/login/templates/choose.html
@@ -27,7 +27,8 @@
 
                 <div class="select_1 "  >
 
-                    <img  src="../static/css/1.png/" alt="单选" onclick="window.open(/release_task_1/); " style="margin-top: 140px;margin-left: -1100px;margin-right: -800px;cursor:pointer;"  >
+                    <img  src="../static/css/1.png/"  onclick="window.open(/release_task_1/); " style="margin-top: 140px;margin-left: -1100px;margin-right: -800px;cursor:pointer;"  >
+
 
                 <div class="select_1 ">
                      <img  src="../static/css/2.png/" onclick="window.open(/release_task_2/); "style="margin-top: -1200px;margin-left: -490px;margin-right: -800px;cursor:pointer;">
